--- a/src/components/Hero/Hero.astro
+++ b/src/components/Hero/Hero.astro
@@ -47,7 +47,7 @@ import heroImageMobile from "@images/hero-bg-min.jpg";
       <h1
         class="font-heading-1 text-pretty text-4xl font-semibold drop-shadow-[0_2px_2px_rgba(0,0,0,0.4)] md:text-7xl md:leading-tight"
       >
-        California Wedding Photography
+        Bienvenidos a la boda de Nuria y Cristian
       </h1>
       <p
         class="mt-8 text-pretty text-lg tracking-widest drop-shadow-[0_1px_1px_rgba(0,0,0,0.2)] md:max-w-[550px] md:text-2xl"
