Traducciones y foto Gdansk

--- a/src/components/Feature/FeatureNumbers.astro
+++ b/src/components/Feature/FeatureNumbers.astro
@@ -16,12 +16,12 @@ interface FeatureCardData {
 // NOTE: You still need to manually update the heading that come before the cards
 const featureData: FeatureCardData[] = [
   {
-    largeText: "20",
-    description: `Years Experience`,
+    largeText: "13",
+    description: `Años Juntos`,
   },
   {
     largeText: "20K",
-    description: `Photos Delivered`,
+    description: `Fotos Tomadas`,
   },
   {
     largeText: "310",
@@ -38,8 +38,7 @@ const featureData: FeatureCardData[] = [
   <div class="mx-auto max-w-6xl px-4">
     <div class="text-prety mr-auto text-center">
       <h2 class="h2">
-        Capture your love story with an experienced, client centered
-        photographer
+        Nuestra historia de amor en números
       </h2>
     </div>
 
