--- a/src/components/Hero/Hero.astro
+++ b/src/components/Hero/Hero.astro
@@ -52,8 +52,7 @@ import heroImageMobile from "@images/hero-bg-min.jpg";
       <p
         class="mt-8 text-pretty text-lg tracking-widest drop-shadow-[0_1px_1px_rgba(0,0,0,0.2)] md:max-w-[550px] md:text-2xl"
       >
-        Transform your wedding moments into lasting memories amidst California's
-        majestic landscapes.
+        Estamos encantados de compartir contigo este bonito dia y el sin fin de recuerdos inolvidables que juntos vamos a crear.
       </p>
       <div class="mt-10 flex flex-wrap justify-center gap-4 md:justify-start">
         <Button
@@ -62,7 +61,7 @@ import heroImageMobile from "@images/hero-bg-min.jpg";
           href="/#contact"
           class="pl-0 text-xl text-white drop-shadow-[0_1px_1px_rgba(0,0,0,0.2)] md:text-3xl"
         >
-          Get a Quote
+          Confirmación de asistencia
         </Button>
       </div>
     </div>
