--- a/src/components/About/About.astro
+++ b/src/components/About/About.astro
@@ -5,16 +5,18 @@
 
 import { Image } from "astro:assets";
 
-import profileImage from "@assets/images/photographer-min.jpg";
+import profileImage from "@assets/images/Nuria2.jpg";
+import profileImage2 from "@assets/images/Cristian.jpg";
+
 ---
 
 <section id="about" class="site-container scroll-mt-10 py-8 md:py-12">
   <div class="flex flex-col md:flex-row">
     <div class="md:w-2/3">
       <h2 class="h3 text-pretty uppercase text-primary-500">
-        Meet your photographer
+        Conoce a la Novia
       </h2>
-      <h3 class="h2 mt-4">Jenna Marie</h3>
+      <h3 class="h2 mt-4">Nuria</h3>
       <div class="mt-8 bg-base-100 p-8 md:mb-20 lg:text-lg">
         <p>
           I specialize in capturing the unique beauty and joy of your special
@@ -25,7 +27,7 @@ import profileImage from "@assets/images/photographer-min.jpg";
           exceptional photography.
         </p>
         <div class="flex w-3/4 justify-end">
-          <p class="font-heading-1 text-3xl italic">- Jenna</p>
+          <p class="font-heading-1 text-3xl italic">- Nuria</p>
         </div>
       </div>
     </div>
@@ -38,6 +40,41 @@ import profileImage from "@assets/images/photographer-min.jpg";
           densities={[1.5, 2]}
           class="h-auto min-h-full w-full min-w-full object-cover"
         />
+      </div>
+    </div>
+  </div>
+</section>
+
+<section id="about" class="site-container scroll-mt-10 py-8 md:py-12">
+  <div class="flex flex-col md:flex-row">
+    <div class="mr-auto max-w-md md:w-1/3 md:max-w-none">
+      <div class="my-auto aspect-[3/4] w-full overflow-hidden">
+        <Image
+          src={profileImage2}
+          alt="Jenna Marie"
+          width={450}
+          densities={[1.5, 2]}
+          class="h-auto min-h-full w-full min-w-full object-cover"
+        />
+      </div>
+    </div>
+    <div class="md:w-2/3">
+      <h2 class="h3 text-pretty uppercase text-primary-500">
+        Conoce al Novio
+      </h2>
+      <h3 class="h2 mt-4">Cristian</h3>
+      <div class="mt-8 bg-base-100 p-8 md:mb-20 lg:text-lg">
+        <p>
+          I specialize in capturing the unique beauty and joy of your special
+          day. With a passion for storytelling and a keen eye for detail, I
+          strive to create timeless images that reflect your love and
+          personality. Whether it's a beachfront ceremony, a vineyard reception,
+          or a city hall elopement, I am dedicated to providing you with
+          exceptional photography.
+        </p>
+        <div class="flex w-3/4 justify-end">
+          <p class="font-heading-1 text-3xl italic">- Cristian</p>
+        </div>
       </div>
     </div>
   </div>
