--- a/src/components/About/About.astro
+++ b/src/components/About/About.astro
@@ -35,7 +35,7 @@ import profileImage2 from "@assets/images/Cristian.jpg";
       <div class="my-auto aspect-[3/4] w-full overflow-hidden">
         <Image
           src={profileImage}
-          alt="Jenna Marie"
+          alt="Nuria"
           width={450}
           densities={[1.5, 2]}
           class="h-auto min-h-full w-full min-w-full object-cover"
@@ -51,7 +51,7 @@ import profileImage2 from "@assets/images/Cristian.jpg";
       <div class="my-auto aspect-[3/4] w-full overflow-hidden">
         <Image
           src={profileImage2}
-          alt="Jenna Marie"
+          alt="Cristian"
           width={450}
           densities={[1.5, 2]}
           class="h-auto min-h-full w-full min-w-full object-cover"
@@ -59,10 +59,10 @@ import profileImage2 from "@assets/images/Cristian.jpg";
       </div>
     </div>
     <div class="md:w-2/3">
-      <h2 class="h3 text-pretty uppercase text-primary-500">
+      <h2 class="h3 text-pretty uppercase text-primary-500" text-right>
         Conoce al Novio
       </h2>
-      <h3 class="h2 mt-4">Cristian</h3>
+      <h3 class="h2 mt-4 text-right">Cristian</h3>
       <div class="mt-8 bg-base-100 p-8 md:mb-20 lg:text-lg">
         <p>
           I specialize in capturing the unique beauty and joy of your special
