--- a/src/components/About/About.astro
+++ b/src/components/About/About.astro
@@ -43,9 +43,6 @@ import profileImage2 from "@assets/images/Cristian.jpg";
       </div>
     </div>
   </div>
-</section>
-
-<section id="about" class="site-container scroll-mt-10 py-8 md:py-12">
   <div class="flex flex-col md:flex-row">
     <div class="mr-auto max-w-md md:w-1/3 md:max-w-none">
       <div class="my-auto aspect-[3/4] w-full overflow-hidden">
@@ -59,7 +56,7 @@ import profileImage2 from "@assets/images/Cristian.jpg";
       </div>
     </div>
     <div class="md:w-2/3">
-      <h2 class="h3 text-pretty uppercase text-primary-500" text-right>
+      <h2 class="h3 text-pretty uppercase text-primary-500 text-right" >
         Conoce al Novio
       </h2>
       <h3 class="h2 mt-4 text-right">Cristian</h3>
@@ -79,3 +76,9 @@ import profileImage2 from "@assets/images/Cristian.jpg";
     </div>
   </div>
 </section>
+
+<!-- <section id="about" class="site-container scroll-mt-10 py-8 md:py-12">
+
+</section>
+
+-->
