--- a/src/components/About/About.astro
+++ b/src/components/About/About.astro
@@ -43,23 +43,15 @@ import profileImage2 from "@assets/images/Cristian.jpg";
       </div>
     </div>
   </div>
+</section>
+
+<section id="about" class="site-container scroll-mt-10 py-8 md:py-12">
   <div class="flex flex-col md:flex-row">
-    <div class="mr-auto max-w-md md:w-1/3 md:max-w-none">
-      <div class="my-auto aspect-[3/4] w-full overflow-hidden">
-        <Image
-          src={profileImage2}
-          alt="Cristian"
-          width={450}
-          densities={[1.5, 2]}
-          class="h-auto min-h-full w-full min-w-full object-cover"
-        />
-      </div>
-    </div>
     <div class="md:w-2/3">
-      <h2 class="h3 text-pretty uppercase text-primary-500 text-right" >
+      <h2 class="h3 text-pretty uppercase text-primary-500">
         Conoce al Novio
       </h2>
-      <h3 class="h2 mt-4 text-right">Cristian</h3>
+      <h3 class="h2 mt-4">Cristian</h3>
       <div class="mt-8 bg-base-100 p-8 md:mb-20 lg:text-lg">
         <p>
           I specialize in capturing the unique beauty and joy of your special
@@ -74,11 +66,16 @@ import profileImage2 from "@assets/images/Cristian.jpg";
         </div>
       </div>
     </div>
+    <div class="mr-auto max-w-md md:w-1/3 md:max-w-none">
+      <div class="my-auto aspect-[3/4] w-full overflow-hidden">
+        <Image
+          src={profileImage2}
+          alt="Cristian"
+          width={450}
+          densities={[1.5, 2]}
+          class="h-auto min-h-full w-full min-w-full object-cover"
+        />
+      </div>
+    </div>
   </div>
 </section>
-
-<!-- <section id="about" class="site-container scroll-mt-10 py-8 md:py-12">
-
-</section>
-
--->
