--- a/src/components/Hero/Hero.astro
+++ b/src/components/Hero/Hero.astro
@@ -11,7 +11,7 @@ import Button from "@components/Button/Button.astro";
 
 // images
 import heroImage from "@images/Gdansk2.jpg";
-import heroImageMobile from "@images/Gdansk2.jpg";
+import heroImageMobile from "@images/Turquia.jpg";
 ---
 
 <section
