--- a/src/components/Hero/Hero.astro
+++ b/src/components/Hero/Hero.astro
@@ -10,7 +10,7 @@ import { Image } from "astro:assets";
 import Button from "@components/Button/Button.astro";
 
 // images
-import heroImage from "@images/Gdansk2.jpg";
+import heroImage from "@images/Turquia.jpg";
 import heroImageMobile from "@images/Turquia.jpg";
 ---
 
