--- a/src/components/Hero/Hero.astro
+++ b/src/components/Hero/Hero.astro
@@ -27,6 +27,7 @@ import heroImageMobile from "@images/Gdansk-Int.jpg";
       aria-hidden="true"
       loading="eager"
       height={1400}
+      bg-opacity={0.9}
     />
     <Image
       src={heroImageMobile}
@@ -35,6 +36,7 @@ import heroImageMobile from "@images/Gdansk-Int.jpg";
       aria-hidden="true"
       loading="eager"
       width={1200}
+      bg-opacity={0.9}
     />
   </div>
 
