Bg imagen Gdansk2 Opacity 60

--- a/src/components/Hero/Hero.astro
+++ b/src/components/Hero/Hero.astro
@@ -10,13 +10,13 @@ import { Image } from "astro:assets";
 import Button from "@components/Button/Button.astro";
 
 // images
-import heroImage from "@images/Gdansk-Int.jpg";
-import heroImageMobile from "@images/Gdansk-Int.jpg";
+import heroImage from "@images/Gdansk2.jpg";
+import heroImageMobile from "@images/Gdansk2.jpg";
 ---
 
 <section
   id="hero"
-  class="relative flex min-h-[100lvh] w-full bg-black bg-opacity-90"
+  class="relative flex min-h-[100lvh] w-full bg-black bg-opacity-60"
 >
   <!-- background image -->
   <div class="absolute -z-20 h-full min-h-full w-full overflow-hidden">
