Footer, Contact, Logo Instagram Plata

--- a/src/components/Footer/Footer.astro
+++ b/src/components/Footer/Footer.astro
@@ -31,55 +31,32 @@ const today = new Date();
       </div>
       <div class="flex gap-4 md:col-span-2">
         <FooterLink href="/#pricing">Pricing</FooterLink>
-        <FooterLink href="/#contact">Contact</FooterLink>
+        <FooterLink href="/#contact">Contacto</FooterLink>
       </div>
     </div>
 
     <!-- lets connect -->
     <div class="description mx-auto mt-6 max-w-[21rem] px-4 text-center">
       <p>
-        <span class="italic">Lets connect!</span> Follow my accounts to view more
-        wedding photography and get inspired for your wedding.
+        <span class="italic">Conecta con nosotros!</span> Siguenos en nuestras redes sociales para no perderte nada de nuestra boda.
       </p>
     </div>
 
     <!-- socials -->
     <div class="mt-8 flex justify-center gap-4 text-primary-500">
       <a
-        href="https://x.com/BowTiedWebReapr"
+        href="https://www.instagram.com/nuria_smile/"
         target="_blank"
         rel="noopener noreferrer"
       >
         <Icon
-          name="socials/mdi-facebook"
+          name="socials/basil-instagram-solid"
           class="size-6 transition hover:opacity-80"
         />
-        <span class="sr-only">Facebook</span>
+        <span class="sr-only">Instagram</span>
       </a>
       <a
-        href="https://x.com/BowTiedWebReapr"
-        target="_blank"
-        rel="noopener noreferrer"
-      >
-        <Icon
-          name="socials/mdi-twitter"
-          class="size-6 transition hover:opacity-80"
-        />
-        <span class="sr-only">Twitter</span>
-      </a>
-      <a
-        href="https://x.com/BowTiedWebReapr"
-        target="_blank"
-        rel="noopener noreferrer"
-      >
-        <Icon
-          name="socials/mdi-youtube"
-          class="size-6 transition hover:opacity-80"
-        />
-        <span class="sr-only">Youtube</span>
-      </a>
-      <a
-        href="https://x.com/BowTiedWebReapr"
+        href="https://www.instagram.com/crise999/"
         target="_blank"
         rel="noopener noreferrer"
       >
@@ -93,11 +70,11 @@ const today = new Date();
 
     <!-- copyright -->
     <div class="mb-2 mt-4 text-center text-sm opacity-80">
-      &copy; {today.getFullYear()} a theme by <a
-        href="https://cosmicthemes.com"
+      &copy; {today.getFullYear()} con amor <a
+        href="https://www.bodanuriaycristian.com/"
         class="transition hover:text-primary-600"
         target="_blank"
-        rel="noopener">Cosmic Themes</a
+        rel="noopener">Nuria y Cristian</a
       >
       <!-- {siteData.name}. All rights reserved. -->
     </div>
