--- a/src/components/Forms/ContactForm.astro
+++ b/src/components/Forms/ContactForm.astro
@@ -11,7 +11,7 @@ import Button from "@components/Button/Button.astro";
   <input type="hidden" name="form-name" value="contact" />
   <div>
     <label for="contact-name" class="font-heading-1 text-lg uppercase"
-      >Your Name</label
+      >Nombre completo</label
     >
     <input
       type="text"
@@ -24,7 +24,7 @@ import Button from "@components/Button/Button.astro";
   </div>
   <div class="flex flex-col gap-1">
     <label for="contact-email" class="font-heading-1 text-lg uppercase"
-      >Contact E-mail
+      >E-mail
     </label>
     <input
       type="email"
@@ -51,7 +51,7 @@ import Button from "@components/Button/Button.astro";
   </div>
   <div>
     <label for="contact-message" class="font-heading-1 text-lg uppercase"
-      >Message
+      >Mensaje
     </label>
     <textarea
       name="message"
@@ -63,7 +63,7 @@ import Button from "@components/Button/Button.astro";
   </div>
   <div class="flex">
     <Button variant="primary" type="submit" class="w-full px-10 md:w-fit"
-      >Submit</Button
+      >Enviar</Button
     >
   </div>
 </form>
