--- a/src/components/Footer/Footer.astro
+++ b/src/components/Footer/Footer.astro
@@ -38,7 +38,7 @@ const today = new Date();
     <!-- lets connect -->
     <div class="description mx-auto mt-6 max-w-[21rem] px-4 text-center">
       <p>
-        <span class="italic">Conecta con nosotros!</span> Siguenos en nuestras redes sociales para no perderte nada de nuestra boda.
+        <span class="italic">Conecta con nosotros !</span> Siguenos en nuestras redes sociales para no perderte ningún detalle de nuestra boda
       </p>
     </div>
 
@@ -61,7 +61,7 @@ const today = new Date();
         rel="noopener noreferrer"
       >
         <Icon
-          name="socials/basil-instagram-solid"
+          name="socials/basil-instagram-solid2"
           class="size-6 transition hover:opacity-80"
         />
         <span class="sr-only">Instagram</span>
