--- a/src/pages/inv-Invitacion.astro
+++ b/src/pages/inv-Invitacion.astro
@@ -1,12 +1,12 @@
 ---
 import Layout from "@/layouts/Layout.astro";
-import Hero from "@/sections/Hero.astro";
-import Countdown from "@/sections/Countdown.astro";
-import PrincipalDate from "@/sections/PrincipalDate.astro";
-import Message from "@/sections/Message.astro";
-import Party from "@/sections/Party.astro";
-import Instagram from "@/sections/Instagram.astro";
-import Footer from "@/sections/Footer.astro";
+import Hero from "@/inv-sections/Hero.astro";
+import Countdown from "@/inv-sections/Countdown.astro";
+import PrincipalDate from "@/inv-sections/PrincipalDate.astro";
+import Message from "@/inv-sections/Message.astro";
+import Party from "@/inv-sections/Party.astro";
+import Instagram from "@/inv-sections/Instagram.astro";
+import Footer from "@/inv-sections/Footer.astro";
 
 ---
 
