--- a/src/inv-sections/Message.astro
+++ b/src/inv-sections/Message.astro
@@ -1,7 +1,7 @@
 ---
-import MessageCard from "@/components/MessageCard.astro";
-import Divider from "@/components/Divider.astro";
-import Title from "@/components/Title.astro";
+import MessageCard from "@/inv-components/MessageCard.astro";
+import Divider from "@/inv-components/Divider.astro";
+import Title from "@/inv-components/Title.astro";
 ---
 
 <section>
