--- a/src/inv-sections/Party.astro
+++ b/src/inv-sections/Party.astro
@@ -1,7 +1,7 @@
 ---
-import CardParty from "@/components/CardParty.jsx";
-import Divider from "@/components/Divider.astro";
-import Title from "@/components/Title.astro";
+import CardParty from "@/inv-components/CardParty.jsx";
+import Divider from "@/inv-components/Divider.astro";
+import Title from "@/inv-components/Title.astro";
 ---
 
 <section>
