--- a/src/inv-sections/PrincipalDate.astro
+++ b/src/inv-sections/PrincipalDate.astro
@@ -1,6 +1,6 @@
 ---
-import Divider from "@/components/Divider.astro";
-import AsistenciaModal from "@/components/AsistenciaModal.jsx";
+import Divider from "@/inv-components/Divider.astro";
+import AsistenciaModal from "@/inv-components/AsistenciaModal.jsx";
 ---
 
 <section
