--- a/src/inv-sections/Countdown.astro
+++ b/src/inv-sections/Countdown.astro
@@ -1,6 +1,6 @@
 ---
-import Divider from "@/components/Divider.astro";
-import Title from "@/components/Title.astro";
+import Divider from "@/inv-components/Divider.astro";
+import Title from "@/inv-components/Title.astro";
 
 const TIMESTAMP_END = 1723320000000;
 ---
