--- a/src/inv-sections/Instagram.astro
+++ b/src/inv-sections/Instagram.astro
@@ -1,6 +1,6 @@
 ---
 
-import Title from "@/components/Title.astro";
+import Title from "@/inv-components/Title.astro";
 import InstagramIcon from "@/icons/InstagramIcon.astro";
 ---
 
