--- a/src/pages/inv-Invitacion.astro
+++ b/src/pages/inv-Invitacion.astro
@@ -1,5 +1,5 @@
 ---
-import Layout from "@/layouts/Layout.astro";
+import Layout from "@/layouts/inv-Layout.astro";
 import Hero from "@/inv-sections/Hero.astro";
 import Countdown from "@/inv-sections/Countdown.astro";
 import PrincipalDate from "@/inv-sections/PrincipalDate.astro";
