--- a/src/layouts/inv-Layout.astro
+++ b/src/layouts/inv-Layout.astro
@@ -1,13 +1,13 @@
 ---
 import Loader from "@/inv-components/Loader.jsx";
 import Intro from "@/inv-sections/Intro.astro";
-import "@fontsource/parisienne";
+//import "@fontsource/parisienne";
 interface Props {
 	title: string;
 }
 import { ViewTransitions } from "astro:transitions";
 import "@fontsource-variable/raleway";
-import "@fontsource/parisienne";
+//import "@fontsource/parisienne";
 import "@fontsource-variable/rubik";
 const { title } = Astro.props;
 ---
