--- a/src/layouts/inv-Layout.astro
+++ b/src/layouts/inv-Layout.astro
@@ -8,7 +8,7 @@ interface Props {
 import { ViewTransitions } from "astro:transitions";
 import "@fontsource-variable/raleway";
 //import "@fontsource/parisienne";
-import "@fontsource-variable/rubik";
+//import "@fontsource-variable/rubik";
 const { title } = Astro.props;
 ---
 
