Modificaciones en invitación

--- a/src/pages/invitacion.astro
+++ b/src/pages/invitacion.astro
@@ -4,7 +4,7 @@
 import BaseLayout from "@layouts/BaseLayout.astro";
 
 // components
-import About from "@components/About/About.astro";
+import Heroinv from "@components/Hero/Heroinv.astro";
 import Contact from "@components/Contact/Contact.astro";
 
 // data
@@ -16,7 +16,6 @@ import siteData from "@config/siteData.json";
   description={siteData.description}
   navStartStyle="white"
 >
-
-  <About />
-  <Contact />
+    <Heroinv />
+    <Contact />
 </BaseLayout>
