--- a/src/components/Forms/ContactForm.astro
+++ b/src/components/Forms/ContactForm.astro
@@ -38,7 +38,7 @@ import Button from "@components/Button/Button.astro";
   </div>
   <div>
     <label for="contact-date" class="font-heading-1 text-lg uppercase"
-      >Event Date
+      >Fecha
     </label>
     <input
       type="date"
