--- a/src/components/Hero/Heroinv.astro
+++ b/src/components/Hero/Heroinv.astro
@@ -12,6 +12,7 @@ import Button from "@components/Button/Button.astro";
 // images
 import heroImage from "@images/hero.webp";
 import heroImageMobile from "@images/hero.webp";
+import arrows from "@images/arrow_down.gif";
 ---
 
 <section
@@ -99,7 +100,7 @@ import heroImageMobile from "@images/hero.webp";
             </div>
         </div>
         <div class="flex justify-center mt-5 items-center">
-            <img src="/images/arrow_down.gif" class="w-14 desktop:w-20" alt="" />
+            <img src={arrow.src} class="w-14 desktop:w-20" alt="" />
         </div>
     </div>
 </section>
