--- a/src/components/Hero/Heroinv.astro
+++ b/src/components/Hero/Heroinv.astro
@@ -12,7 +12,7 @@ import Button from "@components/Button/Button.astro";
 // images
 import heroImage from "@images/hero.webp";
 import heroImageMobile from "@images/hero.webp";
-import arrows from "@images/arrow_down.gif";
+import arrow from "@images/arrow_down.gif";
 ---
 
 <section
