--- a/src/components/Hero/Heroinv.astro
+++ b/src/components/Hero/Heroinv.astro
@@ -13,8 +13,8 @@ import Button from "@components/Button/Button.astro";
 import heroImage from "@images/hero.webp";
 import heroImageMobile from "@images/hero.webp";
 import arrow from "@images/arrow_down.gif";
-import markopen from "@images/mark_open.gif";
-import markclose from "@images/mark_close.gif";
+import markopen from "@images/mark_open.svg";
+import markclose from "@images/mark_close.svg";
 ---
 
 <section
