--- a/src/components/Hero/Heroinv.astro
+++ b/src/components/Hero/Heroinv.astro
@@ -12,10 +12,11 @@ import Button from "@components/Button/Button.astro";
 // images
 import heroImage from "@images/hero.webp";
 import heroImageMobile from "@images/hero.webp";
-import arrow from "@images/arrow_down.gif";
 import markopen from "@images/mark_open.svg";
 import markclose from "@images/mark_close.svg";
----
+import arrow from "@images/arrow_down.gif";
+
+---s
 
 <section
   id="hero"
@@ -94,11 +95,11 @@ import markclose from "@images/mark_close.svg";
             <div
                 class="text-center flex justify-center items-center flex-col mt-7 gap-5"
             >
-                <img src="{markopen.src} class="w-10" />
+                <img src={markopen.src} class="w-10" />
                 <p class="text-xl greater-desktop:text-2xl font-rubik text-color02">
                     En cada mirada, en cada gesto, en cada silencio compartido, encontramos la esencia de lo que significa amarnos.
                 </p>
-                <img src="{markclose.src} class="w-10" />
+                <img src={markclose.src} class="w-10" />
             </div>
         </div>
         <div class="flex justify-center mt-5 items-center">
