--- a/src/components/Hero/Heroinv.astro
+++ b/src/components/Hero/Heroinv.astro
@@ -51,13 +51,15 @@ import arrow from "@images/arrow_down.gif";
       <h1
         class="font-heading-1 text-pretty text-4xl font-semibold drop-shadow-[0_2px_2px_rgba(0,0,0,0.4)] md:text-7xl md:leading-tight"
       >
-        Bienvenidos a la boda de Nuria y Cristian
+        08.06.2025 Nuria & Cristian
       </h1>
+      <img src={markopen.src} class="w-10" />
       <p
         class="mt-8 text-pretty text-lg tracking-widest drop-shadow-[0_1px_1px_rgba(0,0,0,0.2)] md:max-w-[550px] md:text-2xl"
       >
-        Estamos encantados de compartir contigo este bonito dia y el sin fin de recuerdos inolvidables que juntos vamos a crear.
+        En cada mirada, en cada gesto, en cada silencio compartido, encontramos la esencia de lo que significa amarnos..
       </p>
+      <img src={markclose.src} class="w-10" />
       <div class="mt-10 flex flex-wrap justify-center gap-4 md:justify-start">
         <Button
           variant="ghost"
