--- a/src/components/Hero/Heroinv.astro
+++ b/src/components/Hero/Heroinv.astro
@@ -44,14 +44,19 @@ import arrow from "@images/arrow_down.gif";
 
   <!-- hero items -->
   <div
-    class="site-container w-full gap-10 py-44 text-center md:py-52 md:text-left"
+    class="site-container w-full gap-10 py-44 text-center md:py-52 md:text-center"
   >
     <!-- Hero text -->
     <div class="my-auto mr-auto max-w-[800px] flex-col text-base-50">
       <h1
         class="font-heading-1 text-pretty text-4xl font-semibold drop-shadow-[0_2px_2px_rgba(0,0,0,0.4)] md:text-7xl md:leading-tight"
       >
-        08.06.2025 Nuria & Cristian
+        08.06.2025
+      </h1>
+      <h1
+      class="font-heading-1 text-pretty text-4xl font-semibold drop-shadow-[0_2px_2px_rgba(0,0,0,0.4)] md:text-7xl md:leading-tight"
+      >
+      Nuria & Cristian
       </h1>
       <img src={markopen.src} class="w-10" />
       <p
