--- a/src/components/Hero/Heroinv.astro
+++ b/src/components/Hero/Heroinv.astro
@@ -14,9 +14,7 @@ import heroImage from "@images/hero.webp";
 import heroImageMobile from "@images/hero.webp";
 import markopen from "@images/mark_open.svg";
 import markclose from "@images/mark_close.svg";
-import arrow from "@images/arrow_down.gif";
-
----s
+---
 
 <section
   id="hero"
@@ -47,7 +45,7 @@ import arrow from "@images/arrow_down.gif";
     class="site-container w-full gap-10 py-44 text-center md:py-52 md:text-center"
   >
     <!-- Hero text -->
-    <div class="my-auto mr-auto max-w-[800px] flex-col text-base-50">
+    <div class="my-auto mx-auto max-w-[800px] flex-col text-base-50 text-center">
       <h1
         class="font-heading-1 text-pretty text-4xl font-semibold drop-shadow-[0_2px_2px_rgba(0,0,0,0.4)] md:text-7xl md:leading-tight"
       >
@@ -58,14 +56,14 @@ import arrow from "@images/arrow_down.gif";
       >
       Nuria & Cristian
       </h1>
-      <img src={markopen.src} class="w-10" />
+      <img src={markopen.src} class="w-10 mx-auto" />
       <p
-        class="mt-8 text-pretty text-lg tracking-widest drop-shadow-[0_1px_1px_rgba(0,0,0,0.2)] md:max-w-[550px] md:text-2xl"
+        class="mt-8 text-pretty text-lg tracking-widest drop-shadow-[0_1px_1px_rgba(0,0,0,0.2)] md:max-w-[550px] md:text-2xl mx-auto"
       >
         En cada mirada, en cada gesto, en cada silencio compartido, encontramos la esencia de lo que significa amarnos..
       </p>
-      <img src={markclose.src} class="w-10" />
-      <div class="mt-10 flex flex-wrap justify-center gap-4 md:justify-start">
+      <img src={markclose.src} class="w-10 mx-auto" />
+      <div class="mt-10 flex flex-wrap justify-center gap-4">
         <Button
           variant="ghost"
           arrow="right"
@@ -77,40 +75,4 @@ import arrow from "@images/arrow_down.gif";
       </div>
     </div>
   </div>
-</section>
-
-<section
-    class="greater-desktop:h-screen desktop:h-[670px]  h-[670px] hero-section desktop:w-full w-full flex justify-center items-center bg-fixed bg-hero-pattern bg-cover bg-no-repeat bg-center"
->
-    <div
-        class="info-hero z-50 flex flex-col justify-center items-center absolute text-center mx-auto greater-desktop:max-w-3xl desktop:max-w-xl  max-w-80 h-[670px]"
-    >
-        <div>
-            <span
-                class="date-hero w-full table text-2xl desktop:text-xl  greater-desktop:text-2xl text-color02 mb-12 font-rubik font-semibold"
-            >
-                08.06.2025
-            </span>
-            <h1
-                class="married-hero   custom-hero border-b-[1px] pb-8 border-b-white text-6xl greater-desktop:text-8xl text-color02 font-parisienne flex flex-col"
-            >
-                Nuria
-
-                <span> & </span>
-                Cristian
-            </h1>
-            <div
-                class="text-center flex justify-center items-center flex-col mt-7 gap-5"
-            >
-                <img src={markopen.src} class="w-10" />
-                <p class="text-xl greater-desktop:text-2xl font-rubik text-color02">
-                    En cada mirada, en cada gesto, en cada silencio compartido, encontramos la esencia de lo que significa amarnos.
-                </p>
-                <img src={markclose.src} class="w-10" />
-            </div>
-        </div>
-        <div class="flex justify-center mt-5 items-center">
-            <img src={arrow.src} class="w-14 desktop:w-20" alt="" />
-        </div>
-    </div>
 </section>
