--- a/src/components/Hero/Heroinv.astro
+++ b/src/components/Hero/Heroinv.astro
@@ -50,11 +50,13 @@ import markclose from "@images/mark_close.svg";
         class="font-heading-1 text-pretty text-4xl font-semibold drop-shadow-[0_2px_2px_rgba(0,0,0,0.4)] md:text-7xl md:leading-tight"
       >
         08.06.2025
+
       </h1>
       <h1
       class="font-heading-1 text-pretty text-4xl font-semibold drop-shadow-[0_2px_2px_rgba(0,0,0,0.4)] md:text-7xl md:leading-tight"
       >
       Nuria & Cristian
+
       </h1>
       <img src={markopen.src} class="w-10 mx-auto" />
       <p
@@ -67,7 +69,7 @@ import markclose from "@images/mark_close.svg";
         <Button
           variant="ghost"
           arrow="right"
-          href="/#contact"
+          href="#contact"
           class="pl-0 text-xl text-white drop-shadow-[0_1px_1px_rgba(0,0,0,0.2)] md:text-3xl"
         >
           Confirmación de asistencia
