--- a/src/layouts/BaseLayout.astro
+++ b/src/layouts/BaseLayout.astro
@@ -1,5 +1,6 @@
 ---
 import { type CollectionEntry } from "astro:content";
+import { ClientRouter } from "astro/transitions";
 
 // component imports
 import BaseHead from "@layouts/BaseHead.astro";
@@ -39,6 +40,7 @@ const {
       description={description}
       image={heroImage ? heroImage : undefined}
       noindex={noindex}
+      {ClientRouter}
     />
   </head>
   <body id="body" class="bg-base-50 text-base-900">
