fix client router

--- a/src/layouts/BaseLayout.astro
+++ b/src/layouts/BaseLayout.astro
@@ -40,7 +40,7 @@ const {
       description={description}
       image={heroImage ? heroImage : undefined}
       noindex={noindex}
-      {ClientRouter}
+      <ClientRouter />
     />
   </head>
   <body id="body" class="bg-base-50 text-base-900">
