--- a/src/components/Forms/ContactForm.astro
+++ b/src/components/Forms/ContactForm.astro
@@ -71,7 +71,7 @@ import Button from "@components/Button/Button.astro";
       class="form__input"
       id="contact-message"
       rows="6"
-      placeholder=""
+      placeholder="Déjanos un mensaje cariñoso, una consulta o cualquier restricción alimenticia que tengas."
       required></textarea>
   </div>
   <div class="flex">
