--- a/src/components/Forms/ContactForm.astro
+++ b/src/components/Forms/ContactForm.astro
@@ -72,7 +72,8 @@ import Button from "@components/Button/Button.astro";
       id="contact-message"
       rows="6"
       placeholder="Déjanos un mensaje cariñoso, una consulta o cualquier restricción alimenticia que tengas."
-      required></textarea>
+      required>
+    </textarea>
   </div>
   <div class="flex">
     <Button variant="primary" type="submit" class="w-full px-10 md:w-fit"
