--- a/src/pages/invitacion.astro
+++ b/src/pages/invitacion.astro
@@ -6,6 +6,7 @@ import BaseLayout from "@layouts/BaseLayout.astro";
 // components
 import Heroinv from "@components/Hero/Heroinv.astro";
 import Contact from "@components/Contact/Contact.astro";
+import Countdown from "../components/Countdown.astro";
 
 // data
 import siteData from "@config/siteData.json";
@@ -17,5 +18,6 @@ import siteData from "@config/siteData.json";
   navStartStyle="white"
 >
     <Heroinv />
+    <Countdown />
     <Contact />
 </BaseLayout>
