corrección cuenta atrás

--- a/src/components/Countdown.astro
+++ b/src/components/Countdown.astro
@@ -2,13 +2,13 @@
 import Divider from "@/components/Divider.astro";
 import Title from "@/components/Title.astro";
 
-const TIMESTAMP_END = 1749387600;
+const TIMESTAMP_END = 1749402000;
 ---
 
 <section
     class="max-w-6xl desktop:px-16 pt-20 pb-10 text-center mx-auto flex flex-col items-center justify-center"
 >
-        <Title title="Falta" />
+        <Title title="Faltan" />
     <div data-date={TIMESTAMP_END} class="flex flex-row mt-5">
         <div class="border-r-[1px] flex flex-col px-5 border-[#6F6F6E]">
             <span data-days class="text-[#89713E] text-4xl desktop:text-5xl">
