--- a/src/components/Divider.astro
+++ b/src/components/Divider.astro
@@ -10,7 +10,7 @@
         margin-left: auto;
         width: 80%;
         height: 120px;
-        background-image: url("/divider.png");
+        background-image: url("@images/divider.svg");
         background-repeat: no-repeat;
         background-size: contain;
         background-position: center center;
