--- a/src/components/Countdown.astro
+++ b/src/components/Countdown.astro
@@ -1,6 +1,6 @@
 ---
-import Divider from "@/components/Divider.astro";
-import Title from "@/components/Title.astro";
+import Divider from "/components/Divider.astro";
+import Title from "/components/Title.astro";
 
 const TIMESTAMP_END = 1749402000;
 ---
