--- a/src/pages/invitacion.astro
+++ b/src/pages/invitacion.astro
@@ -7,6 +7,8 @@ import BaseLayout from "@layouts/BaseLayout.astro";
 import Heroinv from "@components/Hero/Heroinv.astro";
 import Contact from "@components/Contact/Contact.astro";
 import Countdown from "../components/Countdown.astro";
+import PrincipalDate from "../components/PrincipalDate.astro";
+
 
 // data
 import siteData from "@config/siteData.json";
@@ -19,5 +21,6 @@ import siteData from "@config/siteData.json";
 >
     <Heroinv />
     <Countdown />
+    <PrincipalDate />
     <Contact />
 </BaseLayout>
