--- a/src/components/Divider.astro
+++ b/src/components/Divider.astro
@@ -1,7 +1,6 @@
-// imagenes
-
-import divider from "@images/divider.png";
-
+---
+import divider from "src/assets/images/divider.png"; // Ajusta la ruta según la ubicación de tu imagen
+---
 
 <div class="divider"></div>
 <style>
