--- a/src/components/Divider.astro
+++ b/src/components/Divider.astro
@@ -1,7 +1,3 @@
----
-import divider from "src/assets/images/divider.png"; // Ajusta la ruta según la ubicación de tu imagen
----
-
 <div class="divider"></div>
 <style>
     .divider {
@@ -14,7 +10,7 @@ import divider from "src/assets/images/divider.png"; // Ajusta la ruta según la
         margin-left: auto;
         width: 80%;
         height: 120px;
-        background-image: url(${divider});
+        background-image: url("src/assets/images/divider.png");
         background-repeat: no-repeat;
         background-size: contain;
         background-position: center center;
