--- a/src/components/PrincipalDate.astro
+++ b/src/components/PrincipalDate.astro
@@ -6,7 +6,7 @@ import Divider from "@/components/Divider.astro";
     class="max-w-6xl desktop:mx-auto mx-4 text-center flex gap-20 desktop:gap-10 flex-wrap justify-center items-center"
 >
     <div class="desktop:w-[45%]">
-        <img src="/ceremonia.gif" class="w-32 mx-auto" alt="icono ceremonia" />
+        <img src="src/assets/images/ceremonia.gif" class="w-32 mx-auto" alt="icono ceremonia" />
         <div class="title-pd py-4">
             <h3 class="font-parisienne text-5xl text-color01">Ceremonia</h3>
         </div>
@@ -43,7 +43,7 @@ import Divider from "@/components/Divider.astro";
         </ul>
     </div>
     <div class="desktop:w-[45%]">
-        <img src="/celebration.gif" class="w-32 mx-auto" alt="" />
+        <img src="src/assets/images/celebration.gif" class="w-32 mx-auto" alt="icono de fiesta" />
         <div class="title-pd py-4">
             <h3 class="font-parisienne text-5xl text-color01">Cena & Fiesta</h3>
         </div>
@@ -105,6 +105,7 @@ import Divider from "@/components/Divider.astro";
         gap: 2rem;
     }
     button {
+        background-color: rgb(195 128 11 / 73%);
         @apply w-[280px];
         @apply mx-auto;
     }
