--- a/src/components/PrincipalDate.astro
+++ b/src/components/PrincipalDate.astro
@@ -5,8 +5,8 @@ import { Image } from 'astro:assets';
 import Divider from "@/components/Divider.astro";
 
 // images
-import ceremonia from '../../images/ceremonia.gif';
-import fiesta from '../../images/celebration.gif';
+import ceremonia from '@images/ceremonia.gif';
+import fiesta from '@images/celebration.gif';
 ---
 
 
