--- a/src/components/PrincipalDate.astro
+++ b/src/components/PrincipalDate.astro
@@ -15,7 +15,7 @@ import fiesta from '@images/celebration.gif';
     class="max-w-6xl desktop:mx-auto mx-4 text-center flex gap-20 desktop:gap-10 flex-wrap justify-center items-center"
 >
     <div class="desktop:w-[45%]">
-        <img src={ceremonia} class="w-32 mx-auto" alt="icono ceremonia" />
+        <img src={ceremonia.src} class="w-32 mx-auto" alt="icono ceremonia" />
         <div class="title-pd py-4">
             <h3 class="font-parisienne text-5xl text-color01">Ceremonia</h3>
         </div>
@@ -52,7 +52,7 @@ import fiesta from '@images/celebration.gif';
         </ul>
     </div>
     <div class="desktop:w-[45%]">
-        <img src={fiesta}} class="w-32 mx-auto" alt="icono de fiesta" />
+        <img src={fiesta.src}} class="w-32 mx-auto" alt="icono de fiesta" />
         <div class="title-pd py-4">
             <h3 class="font-parisienne text-5xl text-color01">Cena & Fiesta</h3>
         </div>
