--- a/src/components/Divider.astro
+++ b/src/components/Divider.astro
@@ -17,7 +17,7 @@ import divider from '@images/divider.png';
         margin-left: auto;
         width: 80%;
         height: 120px;
-        background-image: url(divider.src);
+        background-image: url(${divider.src});
         background-repeat: no-repeat;
         background-size: contain;
         background-position: center center;
