--- a/src/components/PrincipalDate.astro
+++ b/src/components/PrincipalDate.astro
@@ -12,7 +12,7 @@ import fiesta from '@images/celebration.gif';
 
 
 <section
-    class="max-w-6xl desktop:mx-auto mx-4 text-center flex gap-20 desktop:gap-10 flex-wrap justify-center items-center"
+    class="max-w-6xl desktop:mx-auto mx-4 text-center flex gap-20 desktop:gap-10 flex-wrap justify-center items-center mx-auto"
 >
     <div class="desktop:w-[45%]">
         <img src={ceremonia.src} class="w-32 mx-auto" alt="icono ceremonia" />
@@ -29,7 +29,7 @@ import fiesta from '@images/celebration.gif';
                     data-id="NL21835056"
                     href="https://www.addevent.com/event/PD24797402"
                     target="_blank"
-                    class="bg-color01 text-color02 py-3 rounded-3xl"
+                    class="bg-color01 text-color02 py-3 rounded-3xl block mt-2"
                 >
                     Agendar
                 </a>
@@ -41,18 +41,18 @@ import fiesta from '@images/celebration.gif';
                 </span>
             </li>
             <li>
-                <p class="text-[28px] text-[#6F6F6E] font-medium">Direción</p>
+                <p class="text-[28px] text-[#6F6F6E] font-medium">Dirección</p>
                 <span class="text-[20px] font-normal text-[#C6C6C5]">
                     Pl. Iglesia, s/n, 30500 Molina de Segura, Murcia
                 </span>
-                <a href="https://g.co/kgs/oGj9p3V" target="_blank" class="bg-color01 text-color02 py-3 rounded-3xl">
+                <a href="https://g.co/kgs/oGj9p3V" target="_blank" class="bg-color01 text-color02 py-3 rounded-3xl block mt-2">
                     ¿Cómo llegar?
                 </a>
             </li>
         </ul>
     </div>
     <div class="desktop:w-[45%]">
-        <img src={fiesta.src}} class="w-32 mx-auto" alt="icono de fiesta" />
+        <img src={fiesta.src} class="w-32 mx-auto" alt="icono de fiesta" />
         <div class="title-pd py-4">
             <h3 class="font-parisienne text-5xl text-color01">Cena & Fiesta</h3>
         </div>
@@ -67,7 +67,7 @@ import fiesta from '@images/celebration.gif';
                     data-id="TK21835117"
                     href="https://www.addevent.com/event/PD24797402"
                     target="_blank"
-                    class="bg-color01 text-color02 py-3 rounded-3xl"
+                    class="bg-color01 text-color02 py-3 rounded-3xl block mt-2"
                 >
                     Agendar
                 </a>
@@ -83,7 +83,7 @@ import fiesta from '@images/celebration.gif';
                 <span class="text-[20px] font-normal text-[#C6C6C5]">
                     Ctra. De la Palma, km 4, 5, 30395 Cartagena, Murcia
                 </span>
-                <a href="https://g.co/kgs/H33srLC" target="_blank" class="bg-color01 text-color02 py-3 rounded-3xl">
+                <a href="https://g.co/kgs/H33srLC" target="_blank" class="bg-color01 text-color02 py-3 rounded-3xl block mt-2">
                     ¿Cómo llegar?
                 </a>
             </li>
@@ -100,7 +100,7 @@ import fiesta from '@images/celebration.gif';
 <style>
     .title-pd {
         border-top: 1px solid #c6c6c5;
-        border-button: 1px solid #c6c6c5;
+        border-bottom: 1px solid #c6c6c5;
     }
 
     ul {
