Color de los botones

--- a/src/components/PrincipalDate.astro
+++ b/src/components/PrincipalDate.astro
@@ -119,6 +119,7 @@ import fiesta from '@images/celebration.gif';
         @apply mx-auto;
     }
     a {
+        background-color: rgba(195, 128, 11, 0.459);
         @apply w-[280px];
         @apply mx-auto;
     }
