añadido a invitacion, party y message

--- a/src/pages/invitacion.astro
+++ b/src/pages/invitacion.astro
@@ -8,6 +8,8 @@ import Heroinv from "@components/Hero/Heroinv.astro";
 import Contact from "@components/Contact/Contact.astro";
 import Countdown from "../components/Countdown.astro";
 import PrincipalDate from "../components/PrincipalDate.astro";
+import Message from "@components/Message.astro";
+import Party from "@components/Party.astro";
 
 
 // data
@@ -22,5 +24,7 @@ import siteData from "@config/siteData.json";
     <Heroinv />
     <Countdown />
     <PrincipalDate />
+    <Message />
+    <Party />
     <Contact />
 </BaseLayout>
