--- a/src/components/Message.astro
+++ b/src/components/Message.astro
@@ -1,7 +1,11 @@
 ---
+import { Image } from 'astro:assets';
 import MessageCard from "@/components/MessageCard.astro";
 import Divider from "@/components/Divider.astro";
 import Title from "@/components/Title.astro";
+
+import corazon from '@images/heard-message.gif';
+
 ---
 
 <section>
@@ -14,7 +18,7 @@ import Title from "@/components/Title.astro";
         >
             Un minuto, un segundo, un instante que queda en la eternidad
         </span>
-        <img src="/heard-message.gif" class="w-28 mx-auto" title="gift de corazón" />
+        <img src={corazon.src} class="w-28 mx-auto" title="gift de corazón" />
     </div>
     <div
         class="max-w-[1140px] flex flex-row flex-wrap gap-8 desktop:gap-4 mx-auto justify-center items-center"
