--- a/src/components/Message.astro
+++ b/src/components/Message.astro
@@ -5,6 +5,8 @@ import Divider from "@/components/Divider.astro";
 import Title from "@/components/Title.astro";
 
 import corazon from '@images/heard-message.gif';
+import novio    from '@images/novio.jpg';
+import novia    from '@images/novia.jpg';
 
 ---
 
@@ -26,7 +28,7 @@ import corazon from '@images/heard-message.gif';
         <MessageCard
             person="Dahiana"
             message={`Queremos compartir con cada uno de ustedes un día muy especial para nosotros, una de las decisiones más importantes de nuestra vida. Nos vamos a sentir afortunados de estar rodeados de nuestros seres queridos y amistades, con quienes hemos tenido la oportunidad de compartir momentos inolvidables. Esperamos que nos puedan acompañar y pasen una noche memorable.`}
-            image="novia.jpg"
+            image={novia.src}
         />
 
         <MessageCard
@@ -34,7 +36,7 @@ import corazon from '@images/heard-message.gif';
             message={`
 Cada minuto es importante y especial, como aquellos que hemos vivido en algún momento, y este no tiene por qué ser diferente. Pensamos en ti y en cómo formas parte de nuestra historia. Por ello, espero que nos puedas acompañar en un día muy especial para nosotros y tener, una vez más, la oportunidad de pasar un momento de dicha y felicidad ante una decisión tan importante. ¡Te esperamos!
         `}
-            image="novio.jpg"
+            image={novio.src}
         />
     </div>
     <Divider />
