--- a/src/components/Hero/Heroinv.astro
+++ b/src/components/Hero/Heroinv.astro
@@ -10,8 +10,8 @@ import { Image } from "astro:assets";
 import Button from "@components/Button/Button.astro";
 
 // images
-import heroImage from "@images/hero.webp";
-import heroImageMobile from "@images/hero.webp";
+import heroImage from "@images/Invitacion.png";
+import heroImageMobile from "@images/Invitacion.png";
 import markopen from "@images/mark_open.svg";
 import markclose from "@images/mark_close.svg";
 ---
